Formatting cleanup; more sprite changes

--- a/simul_conf.toml
+++ b/simul_conf.toml
@@ -5,7 +5,7 @@ DrawCollisionShapes = false
 # General config
 ResourcePath = "."
 
-# Window
+# Window properties
 [window]
 Title="Blue"
 Width=200
